<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string-array name="command_state">
  		<item>main</item>
   	 	<item>get</item>
    	<item>put</item>
    	<item>status</item>
    	<item>construct</item>
    	<item>communicate</item>
    	<item>relay change</item>
  	</string-array>
	<string name="app_name">overlayweaver_for_android</string>
	<string name="KVMessage">KeyとValue(値) を、入れて、\n[put]ボタンを\押してください。\nP2Pネットワーク上に、\nこのKey/Valueのペアで配置されます。\n</string>
	<string name="KeyText">Key</string>
	<string name="ValueText">Value</string>
	<string name="PutButton">put</string>
	<string name="PutMessage">putするメッセージ</string>
	<string name="GetButton">get</string>
	<string name="GetMessage">getするメッセージ</string>
	<string name="LOGMessage">ここに、操作ログが表示されます。\n</string>
</resources>
