<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:textSize="14px"
		android:text="@string/KVMessage"
		android:layout_marginBottom="5px"/>
		
	<RelativeLayout
		android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
		    <TextView
		        android:id="@+id/put_key_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/KeyText" 
		        android:layout_marginLeft="5px" 
		        android:layout_marginRight="2px"/>
		    <EditText
		        android:id="@+id/put_key_edit_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:singleLine="true"
		        android:layout_toRightOf="@+id/put_key_text_view" 
		        android:layout_marginRight="10px"/>
		
		    <TextView
		        android:id="@+id/put_value_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ValueText" 
		        android:layout_toRightOf="@+id/put_key_edit_view"/>
		    <EditText
		        android:id="@+id/put_value_edit_view"
		        android:layout_height="wrap_content"
	            android:singleLine="true" 
	            android:layout_toRightOf="@+id/put_value_text_view" 
	            android:layout_width="wrap_content"/>
	</RelativeLayout>
	<Button
		android:id="@+id/put_button"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:text="@string/PutButton" 
	    android:layout_marginTop="5px"
	    android:layout_marginBottom="10px" android:layout_width="fill_parent"/>
    <Button android:id="@+id/put_finish"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="put finish"/>
</LinearLayout>
